--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "nodemon": "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
