--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "data-server": "cp ./data/orig-db.json ./data/db.json && json-server --watch ./data/db.json"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@angular/router": "~12.2.0",
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
+    "json-server": "^0.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
