added studio-ui-tmpl library as a replacement for shared module

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "start:prod": "http-server ./dist -a localhost -p 4200",
@@ -12,13 +12,13 @@
     "test": "ng test",
     "server": "nodemon ./backend/server.js",
     "data-server": "json-server --watch ./data/db.json",
-    "build-container":"docker build -t josyalem/angular-template:v1 .",
-    "dockerize":"run-s build:prod build-container",
-    "run-container":"docker run -d --rm -it --name ang-template -p 127.0.0.1:5050:80  josyalem/angular-template:latest",
-    "stop-container":"docker container stop  ang-template",
-    "remove-container":"docker container rm  ang-template",
-    "cleanup-container":"run-s stop-container remove-container",
-    "container-terminal":"docker exec -it ang-template /bin/sh"
+    "build-container": "docker build -t josyalem/angular-template:v1 .",
+    "dockerize": "run-s build:prod build-container",
+    "run-container": "docker run -d --rm -it --name ang-template -p 127.0.0.1:5050:80  josyalem/angular-template:latest",
+    "stop-container": "docker container stop  ang-template",
+    "remove-container": "docker container rm  ang-template",
+    "cleanup-container": "run-s stop-container remove-container",
+    "container-terminal": "docker exec -it ang-template /bin/sh"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +38,7 @@
     "json-server": "^0.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
+    "studio-ui-tmpl": "0.0.3",
     "tslib": "^2.3.0",
     "underscore": "^1.13.1",
     "zone.js": "~0.11.4"
