--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve -o",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
-    "start:prod": "http-server ./dist -a localhost -p 4200",
+    "start:prod": "http-server ./dist/ang-proj -a localhost -p 4200",
     "build-start": "run-s build:prod start:prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -45,12 +45,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "12.1.3",
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/underscore": "^1.11.3",
+    "css-loader": "^6.5.1",
     "http-server": "^13.0.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
