--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng s -o",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "start:prod": "http-server ./dist/ang-proj -a localhost -p 4200",
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngneat/tailwind": "^7.0.3",
     "angular-in-memory-web-api": "^0.11.0",
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
@@ -49,10 +50,14 @@
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/underscore": "^1.11.3",
-    "css-loader": "^6.5.1",
+    "autoprefixer": "^10.4.0",
     "http-server": "^13.0.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
@@ -62,6 +67,7 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.0.7",
     "typescript": "~4.3.5"
   }
 }
